// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`teams actions deleteTeamSuccess should return an action to delete a team 1`] = `
[
  {
    "payload": 1,
    "type": "DELETE_TEAM_SUCCESS",
  },
]
`;

exports[`teams actions fetchTeamMembersSuccess should return an action to fetch team members 1`] = `
[
  {
    "payload": {
      "id": 33,
      "members": [
        {
          "email": "foo@gorgias.com",
          "id": 182267,
          "meta": {
            "name_set_via": "agent",
          },
          "name": "Foo",
        },
      ],
    },
    "type": "FETCH_TEAM_MEMBERS_SUCCESS",
  },
]
`;

exports[`teams actions fetchTeamSuccess should return an action to fetch a team 1`] = `
[
  {
    "payload": {
      "created_datetime": "2021-10-28T13:59:55.322780+00:00",
      "decoration": {},
      "description": null,
      "id": 33,
      "members": [
        {
          "email": "foo@gorgias.com",
          "id": 182267,
          "meta": {
            "name_set_via": "agent",
          },
          "name": "Foo",
        },
      ],
      "name": "Foo",
      "uri": "/api/teams/33/",
    },
    "type": "FETCH_TEAM_SUCCESS",
  },
]
`;

exports[`teams actions updateTeamSuccess should return an action to update a team 1`] = `
[
  {
    "payload": {
      "created_datetime": "2021-10-28T13:59:55.322780+00:00",
      "decoration": {},
      "description": null,
      "id": 33,
      "members": [
        {
          "email": "foo@gorgias.com",
          "id": 182267,
          "meta": {
            "name_set_via": "agent",
          },
          "name": "Foo",
        },
      ],
      "name": "Foo",
      "uri": "/api/teams/33/",
    },
    "type": "UPDATE_TEAM_SUCCESS",
  },
]
`;
